# laser-dac-rs

./: .gitignore  API_GUIDELINES_REVIEW.md  BENCHMARKS.md  CONTEXT.md  Cargo.toml  README.md  release.toml
.cargo/: config.toml
.githooks/: pre-commit
.github/actions/setup-rust/: action.yml
.github/workflows/: ci.yml  release.yml
benches/: chunk_pipeline.rs  presentation.rs  protocol_encoding.rs  resampling.rs
benches/common/: mod.rs
docs/: dac-quality-analysis.md  pr-3-review.md  refactor-progress.md  streaming-api-cleanup.md  streaming-api-refactor-proposal.md
examples/: audio.rs  automatic.rs  avb_file.rs  bench_fill_chunk.rs  bench_transition.rs  callback.rs  frame.rs  frame_adapter.rs  frame_session.rs  high_level.rs  manual.rs  mid_level.rs  reconnect.rs  scope_xy.rs  stream.rs  transitions.rs  unified.rs  usb_probe.rs  usb_stream_validate.rs
examples/common/: audio.rs  mod.rs  test-pattern.json
plans/: frame-first-architecture.md  frame-session-liveness-plan.md  frame-session-output-filter-plan.md  modulaser-migration-guide.md  per-protocol-discovery-plan.md  scheduler-unification-and-buffer-estimator.md  with-discovery-factory.md
plans/streaming/: example-pipeline.md  streaming.md
src/: backend.rs  benchmark_support.rs  config.rs  device.rs  discovery.rs  discovery_worker.rs  error.rs  frame_adapter.rs  lib.rs  net_utils.rs  point.rs  presentation.rs  reconnect.rs  resample.rs  scheduler.rs  session.rs  stream.rs  types.rs  worker.rs
src/buffer_estimate/: dual_track_ack.rs  mod.rs  runtime_authority.rs  software_decay.rs  status_decay.rs
src/presentation/: content_source.rs  driver.rs  engine.rs  mod.rs  session.rs  slice_pipeline.rs  tests.rs
src/presentation/output_model/: blocking_fifo.rs  mod.rs  network_fifo.rs  udp_timed.rs  usb_frame_swap.rs
src/protocols/: mod.rs  usb_transfer.rs
src/protocols/audio_out/: backend.rs  discovery.rs  mod.rs
src/protocols/avb/: backend.rs  discovery.rs  error.rs  mod.rs
src/protocols/ether_dream/: backend.rs  discovery.rs  mod.rs  protocol.rs
src/protocols/ether_dream/dac/: mod.rs  stream.rs
src/protocols/helios/: backend.rs  discovery.rs  frame.rs  mod.rs  native.rs
src/protocols/idn/: backend.rs  discovery.rs  error.rs  mod.rs  protocol.rs
src/protocols/idn/dac/: mod.rs  stream.rs
src/protocols/lasercube_network/: ack.rs  backend.rs  command.rs  diagnostics.rs  discovery.rs  error.rs  mod.rs  pacing.rs  packetizer.rs  profiles.rs  protocol.rs  status.rs  transport.rs
src/protocols/lasercube_network/transport/: handle.rs  state.rs  worker.rs
src/protocols/lasercube_usb/: backend.rs  discovery.rs  error.rs  mod.rs  protocol.rs
src/protocols/lasercube_usb/dac/: mod.rs  stream.rs
src/protocols/lasercube_wifi/: backend.rs  discovery.rs  error.rs  mod.rs  protocol.rs
src/protocols/lasercube_wifi/dac/: buffer_estimator.rs  mod.rs  stream.rs
src/protocols/oscilloscope/: backend.rs  discovery.rs  mod.rs
src/receiver/: behavior.rs  config.rs  constants.rs  mod.rs  packet_builder.rs  parser.rs  server.rs
src/stream/: chunk_producer.rs  mod.rs  tests.rs
tests/: api_smoke.rs  ether_dream_e2e.rs  idn_e2e.rs  receiver_server.rs
tools/idn-mock-server/: Cargo.toml
tools/idn-mock-server/src/: behavior.rs  config.rs  constants.rs  lib.rs  packet_builder.rs  server.rs
tools/idn-simulator/: Cargo.toml
tools/idn-simulator/src/: app.rs  fps_estimator.rs  main.rs  persistence_buffer.rs  protocol_handler.rs  renderer.rs  server.rs  settings.rs
udev/: 99-laser-dac.rules
