[package]
name = "laser-dac"
version = "0.13.0"
edition = "2021"
authors = ["Kees Kluskens <kees@kees.im>"]
description = "Unified laser DAC abstraction supporting multiple protocols"
license = "MIT"
keywords = ["laser", "dac", "ilda", "helios", "etherdream"]
categories = ["hardware-support"]
readme = "README.md"
repository = "https://github.com/ModulaserApp/laser-dac-rs"
homepage = "https://github.com/ModulaserApp/laser-dac-rs"
documentation = "https://docs.rs/laser-dac"
rust-version = "1.87"

[lib]
bench = false

[workspace]
members = [".", "tools/idn-simulator"]

[features]
default = ["all-dacs", "asio"]

# Meta features
all-dacs = ["usb-dacs", "network-dacs", "audio-dacs"]
usb-dacs = ["helios", "lasercube-usb"]
network-dacs = ["ether-dream", "idn", "lasercube-network"]
audio-dacs = ["avb", "oscilloscope"]

# Individual DAC protocols
helios = ["dep:rusb"]
lasercube-usb = ["dep:rusb"]
ether-dream = ["dep:socket2"]
idn = ["dep:socket2", "dep:if-addrs"]
lasercube-network = ["dep:socket2", "dep:if-addrs"]
avb = ["dep:cpal", "dep:crossbeam-queue"]

# Oscilloscope XY mode via audio output
oscilloscope = ["dep:cpal", "dep:crossbeam-queue"]

# Opt-in ASIO support on Windows (requires the Steinberg ASIO SDK and
# LIBCLANG_PATH / CPAL_ASIO_DIR env vars at build time). Without this feature,
# AVB and oscilloscope use the cpal default host (WASAPI on Windows).
asio = ["dep:cpal", "cpal/asio"]

# Optional serialization
serde = ["dep:serde"]

# IDN UDP receiver server (for hosts accepting incoming laser streams)
receiver = ["idn"]

# Test utilities (exposes additional APIs for testing)
testutils = []

# The fused per-chunk benchmark fixture (`ChunkPipelineBenchmark`). It models
# every protocol's driver-thread buffer discipline in one type, so it needs all
# five point-based protocols compiled in rather than a subset.
chunk-pipeline-bench = [
    "testutils",
    "helios",
    "ether-dream",
    "idn",
    "lasercube-network",
    "lasercube-usb",
]

[dependencies]
thiserror = "1.0"
bitflags = "2"
byteorder = "1.5"
log = "0.4"
# Cross-platform thread priority for the frame-scheduler thread, so pacing
# sleeps are less likely to be preempted under system load (see issue #35).
thread-priority = "3"
cpal = { version = "0.15", optional = true }
crossbeam-queue = { version = "0.3", optional = true }

# USB DACs (optional)
rusb = { version = "0.9", optional = true }

# Network DACs (optional for lasercube-network)
socket2 = { version = "0.5", features = ["all"], optional = true }
if-addrs = { version = "0.15", optional = true }

# Optional serialization
serde = { version = "1.0", features = ["derive"], optional = true }

# Force vendored libusb on macOS and Windows. On macOS, Homebrew libusb 1.0.29
# can trigger an `IOUSBHostFamily` kernel panic on Apple Silicon / macOS 26.x
# with the Helios DAC; the bundled 1.0.27 avoids it. On Windows there is no
# system libusb, so vendoring is required for redistributable builds.
# Linux keeps dynamic linking against the distro-packaged libusb.
[target.'cfg(target_os = "macos")'.dependencies]
rusb = { version = "0.9", optional = true, features = ["vendored"] }

[target.'cfg(target_os = "windows")'.dependencies]
rusb = { version = "0.9", optional = true, features = ["vendored"] }

[dev-dependencies]
clap = { version = "4", features = ["derive"] }
ctrlc = "3.4"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cpal = "0.15"
hound = "3.5"
criterion = { version = "=0.8.2", features = ["html_reports"] }

[[example]]
name = "stream"
path = "examples/stream.rs"

[[example]]
name = "frame"
path = "examples/frame.rs"

[[example]]
name = "audio"
path = "examples/audio.rs"

[[example]]
name = "reconnect"
path = "examples/reconnect.rs"

[[example]]
name = "scope_xy"
path = "examples/scope_xy.rs"
required-features = ["oscilloscope"]

[[example]]
name = "transitions"
path = "examples/transitions.rs"

[[bench]]
name = "presentation"
harness = false
required-features = ["testutils"]

[[bench]]
name = "resampling"
harness = false
required-features = ["testutils", "avb"]

[[bench]]
name = "protocol_encoding"
harness = false
required-features = ["testutils", "usb-dacs", "network-dacs"]

[[bench]]
name = "chunk_pipeline"
harness = false
required-features = ["chunk-pipeline-bench"]

[package.metadata.docs.rs]
features = ["all-dacs"]
